--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Invitación de boda MODELO BOHO &#8211; Felizia Blog</title>
+    <title>Invitación de boda &#8211; ARA & ALE</title>
     <meta name='robots' content='noindex, nofollow' />
     <link rel="alternate" type="application/rss+xml" title="Felizia Blog &raquo; Feed" href="https://invitaciondigital.felizia.es/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Felizia Blog &raquo; Feed de los comentarios" href="https://invitaciondigital.felizia.es/comments/feed/" />
